2005-12-20  Carl Worth  <cworth@cworth.org>

	* src/cairo-meta-surface.c: Add some comments describing what a
	cairo_meta_surface_t is.
	
	* src/test-fallback-surface.c:
	* src/test-fallback-surface.h: Remove unused
	_test_fallback_surface_create_for_data.
	
	* src/test-meta-surface.c:
	* src/test-meta-surface.h: Remove unused
	_test_meta_surface_create_for_data. Add missing source file
	src/test-meta-surface.h.

2005-12-20  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h:
	* src/cairo-gstate.c: (_cairo_gstate_get_antialias):
	* src/cairo-surface-fallback.c: (_create_composite_mask_pattern),
	(_clip_and_composite_with_mask), (_clip_and_composite_combine),
	(_clip_and_composite_source), (_cairo_rectangle_empty),
	(_clip_and_composite), (_composite_trap_region),
	(_composite_traps_draw_func), (_clip_and_composite_trapezoids),
	(_cairo_surface_fallback_paint), (_cairo_surface_fallback_mask),
	(_cairo_surface_fallback_stroke), (_cairo_surface_fallback_fill),
	(_cairo_surface_fallback_show_glyphs): Move more fallback code
	from cairo-gstate.c to cairo-surface-fallback.c where it
	belongs. In the process, clean up the function names a bit and
	make the whole mess static.

2005-12-19  Carl Worth  <cworth@cworth.org>

	* src/Makefile.am:
	* src/cairo-surface-fallback-private.h:
	* src/cairo-surface-fallback.c: (_fallback_init), (_fallback_fini),
	(_cairo_surface_fallback_paint), (_cairo_surface_mask_draw_func),
	(_cairo_surface_fallback_mask), (_cairo_surface_fallback_stroke),
	(_cairo_surface_fallback_fill),
	(_cairo_surface_old_show_glyphs_draw_func),
	(_cairo_surface_fallback_show_glyphs),
	(_cairo_surface_fallback_snapshot),
	(_cairo_surface_fallback_composite),
	(_cairo_surface_fallback_fill_rectangles),
	(_cairo_surface_fallback_composite_trapezoids):
	* src/cairo-surface.c: (_cairo_surface_snapshot),
	(_cairo_surface_composite), (_cairo_surface_fill_rectangles),
	(_cairo_surface_paint), (_cairo_surface_mask),
	(_cairo_surface_stroke), (_cairo_surface_fill),